# CourseAttendance/DtoModel/ReqDtos/UpdateProfileSelfReqDto.cs
@@ -3,7 +3,7 @@ using System.ComponentModel.DataAnnotations;
 
 namespace CourseAttendance.DtoModel.ReqDtos
 {
-	public class UpdateProfileReqDto
+	public class UpdateProfileSelfReqDto
 	{
 		/// <summary>
 		/// 邮件
@@ -17,21 +17,15 @@ namespace CourseAttendance.DtoModel.ReqDtos
 		/// 姓名
 		/// </summary>
 		[Required]
-		public  string Name { get; set; }
+		public string Name { get; set; }
 		/// <summary>
 		/// 工号
 		/// </summary>
 		[Required]
-		public  string UserName { get; set; }
-		/// <summary>
-		/// 身份权限
-		/// </summary>
-		[Required]
-		public List<UserRole> Roles { get; set; }
+		public string UserName { get; set; }
 		public CreateUserAcademicReqDto? CreateAcademicExt { get; set; }
 		public CreateUserAdminReqDto? CreateAdminExt { get; set; }
 		public CreateUserStudentReqDto? CreateStudentExt { get; set; }
 		public CreateUserTeacherReqDto? CreateTeacherExt { get; set; }
-
 	}
 }
